// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`00 Tokenizer simple case 1`] = `
Object {
  "buffer": "/**%0A%20*%20line%201%20%0A%20*%20line%202%0A%20*/",
  "tokens": Array [
    Object {
      "indexOfLine": 0,
      "line": ">line 1<",
      "span": ">    < ",
      "tokenKind": "AsciiWord",
    },
    Object {
      "indexOfLine": 0,
      "line": ">line 1<",
      "span": "    > <",
      "tokenKind": "Spacing",
    },
    Object {
      "indexOfLine": 0,
      "line": ">line 1<",
      "span": "     > <",
      "tokenKind": "AsciiWord",
    },
    Object {
      "indexOfLine": 0,
      "line": ">line 1<",
      "span": "      ><",
      "tokenKind": "Newline",
    },
    Object {
      "indexOfLine": 1,
      "line": ">line 2<",
      "span": ">    < ",
      "tokenKind": "AsciiWord",
    },
    Object {
      "indexOfLine": 1,
      "line": ">line 2<",
      "span": "    > <",
      "tokenKind": "Spacing",
    },
    Object {
      "indexOfLine": 1,
      "line": ">line 2<",
      "span": "     > <",
      "tokenKind": "AsciiWord",
    },
    Object {
      "indexOfLine": 1,
      "line": ">line 2<",
      "span": "      ><",
      "tokenKind": "Newline",
    },
    Object {
      "indexOfLine": 1,
      "line": ">line 2<",
      "span": "      ><",
      "tokenKind": "EndOfInput",
    },
  ],
}
`;

exports[`01 Tokenizer degenerate cases 1`] = `
Object {
  "buffer": "/***/",
  "tokens": Array [
    Object {
      "indexOfLine": -1,
      "line": "><",
      "span": "",
      "tokenKind": "EndOfInput",
    },
  ],
}
`;

exports[`01 Tokenizer degenerate cases 2`] = `
Object {
  "buffer": "/**%0A%20*%0A%20*/",
  "tokens": Array [
    Object {
      "indexOfLine": 0,
      "line": "><",
      "span": "><",
      "tokenKind": "Newline",
    },
    Object {
      "indexOfLine": 0,
      "line": "><",
      "span": "><",
      "tokenKind": "EndOfInput",
    },
  ],
}
`;

exports[`01 Tokenizer degenerate cases 3`] = `
Object {
  "buffer": "/**%0A%20%0A%20%0A%20*/",
  "tokens": Array [
    Object {
      "indexOfLine": 0,
      "line": "><",
      "span": "><",
      "tokenKind": "Newline",
    },
    Object {
      "indexOfLine": 1,
      "line": "><",
      "span": "><",
      "tokenKind": "Newline",
    },
    Object {
      "indexOfLine": 1,
      "line": "><",
      "span": "><",
      "tokenKind": "EndOfInput",
    },
  ],
}
`;

exports[`02 Backslash escapes: positive examples 1`] = `
Object {
  "buffer": "/**%0A%20*%20%5C%24%5C@param%0A%20*/",
  "tokens": Array [
    Object {
      "indexOfLine": 0,
      "line": ">[b]$[b]@param<",
      "span": ">   <         ",
      "tokenKind": "Backslash",
    },
    Object {
      "indexOfLine": 0,
      "line": ">[b]$[b]@param<",
      "span": "   > <        ",
      "tokenKind": "OtherPunctuation",
    },
    Object {
      "indexOfLine": 0,
      "line": ">[b]$[b]@param<",
      "span": "    >   <     ",
      "tokenKind": "Backslash",
    },
    Object {
      "indexOfLine": 0,
      "line": ">[b]$[b]@param<",
      "span": "       > <    ",
      "tokenKind": "AtSign",
    },
    Object {
      "indexOfLine": 0,
      "line": ">[b]$[b]@param<",
      "span": "        >     <",
      "tokenKind": "AsciiWord",
    },
    Object {
      "indexOfLine": 0,
      "line": ">[b]$[b]@param<",
      "span": "             ><",
      "tokenKind": "Newline",
    },
    Object {
      "indexOfLine": 0,
      "line": ">[b]$[b]@param<",
      "span": "             ><",
      "tokenKind": "EndOfInput",
    },
  ],
}
`;

exports[`03 Backslash escapes: negative examples 1`] = `
Object {
  "buffer": "/**%0A%20*%20letter%3A%20%5CA%20space%3A%20%5C%20%20end%20of%20line%3A%20%5C%0A%20*/",
  "tokens": Array [
    Object {
      "indexOfLine": 0,
      "line": ">letter: [b]A space: [b]  end of line: [b]<",
      "span": ">      <                                  ",
      "tokenKind": "AsciiWord",
    },
    Object {
      "indexOfLine": 0,
      "line": ">letter: [b]A space: [b]  end of line: [b]<",
      "span": "      > <                                 ",
      "tokenKind": "OtherPunctuation",
    },
    Object {
      "indexOfLine": 0,
      "line": ">letter: [b]A space: [b]  end of line: [b]<",
      "span": "       > <                                ",
      "tokenKind": "Spacing",
    },
    Object {
      "indexOfLine": 0,
      "line": ">letter: [b]A space: [b]  end of line: [b]<",
      "span": "        >   <                             ",
      "tokenKind": "Backslash",
    },
    Object {
      "indexOfLine": 0,
      "line": ">letter: [b]A space: [b]  end of line: [b]<",
      "span": "           > <                            ",
      "tokenKind": "AsciiWord",
    },
    Object {
      "indexOfLine": 0,
      "line": ">letter: [b]A space: [b]  end of line: [b]<",
      "span": "            > <                           ",
      "tokenKind": "Spacing",
    },
    Object {
      "indexOfLine": 0,
      "line": ">letter: [b]A space: [b]  end of line: [b]<",
      "span": "             >     <                      ",
      "tokenKind": "AsciiWord",
    },
    Object {
      "indexOfLine": 0,
      "line": ">letter: [b]A space: [b]  end of line: [b]<",
      "span": "                  > <                     ",
      "tokenKind": "OtherPunctuation",
    },
    Object {
      "indexOfLine": 0,
      "line": ">letter: [b]A space: [b]  end of line: [b]<",
      "span": "                   > <                    ",
      "tokenKind": "Spacing",
    },
    Object {
      "indexOfLine": 0,
      "line": ">letter: [b]A space: [b]  end of line: [b]<",
      "span": "                    >   <                 ",
      "tokenKind": "Backslash",
    },
    Object {
      "indexOfLine": 0,
      "line": ">letter: [b]A space: [b]  end of line: [b]<",
      "span": "                       >  <               ",
      "tokenKind": "Spacing",
    },
    Object {
      "indexOfLine": 0,
      "line": ">letter: [b]A space: [b]  end of line: [b]<",
      "span": "                         >   <            ",
      "tokenKind": "AsciiWord",
    },
    Object {
      "indexOfLine": 0,
      "line": ">letter: [b]A space: [b]  end of line: [b]<",
      "span": "                            > <           ",
      "tokenKind": "Spacing",
    },
    Object {
      "indexOfLine": 0,
      "line": ">letter: [b]A space: [b]  end of line: [b]<",
      "span": "                             >  <         ",
      "tokenKind": "AsciiWord",
    },
    Object {
      "indexOfLine": 0,
      "line": ">letter: [b]A space: [b]  end of line: [b]<",
      "span": "                               > <        ",
      "tokenKind": "Spacing",
    },
    Object {
      "indexOfLine": 0,
      "line": ">letter: [b]A space: [b]  end of line: [b]<",
      "span": "                                >    <    ",
      "tokenKind": "AsciiWord",
    },
    Object {
      "indexOfLine": 0,
      "line": ">letter: [b]A space: [b]  end of line: [b]<",
      "span": "                                    > <   ",
      "tokenKind": "OtherPunctuation",
    },
    Object {
      "indexOfLine": 0,
      "line": ">letter: [b]A space: [b]  end of line: [b]<",
      "span": "                                     > <  ",
      "tokenKind": "Spacing",
    },
    Object {
      "indexOfLine": 0,
      "line": ">letter: [b]A space: [b]  end of line: [b]<",
      "span": "                                      >   <",
      "tokenKind": "Backslash",
    },
    Object {
      "indexOfLine": 0,
      "line": ">letter: [b]A space: [b]  end of line: [b]<",
      "span": "                                         ><",
      "tokenKind": "Newline",
    },
    Object {
      "indexOfLine": 0,
      "line": ">letter: [b]A space: [b]  end of line: [b]<",
      "span": "                                         ><",
      "tokenKind": "EndOfInput",
    },
  ],
}
`;

exports[`04 General characters 1`] = `
Object {
  "buffer": "/**%0A%20*%20%21%22%23%24%25%26%27%28%29*+%2C-./%3A%3B%3C%3D%3E%3F@%5B%5D%5E_%60%7B%7C%7D%7E%0A%20*/",
  "tokens": Array [
    Object {
      "indexOfLine": 0,
      "line": ">![q]#$%&'()*+,-./:;[<]=[>]?@[]^_[c]{|}~<",
      "span": "> <                                     ",
      "tokenKind": "OtherPunctuation",
    },
    Object {
      "indexOfLine": 0,
      "line": ">![q]#$%&'()*+,-./:;[<]=[>]?@[]^_[c]{|}~<",
      "span": " >   <                                  ",
      "tokenKind": "DoubleQuote",
    },
    Object {
      "indexOfLine": 0,
      "line": ">![q]#$%&'()*+,-./:;[<]=[>]?@[]^_[c]{|}~<",
      "span": "    > <                                 ",
      "tokenKind": "OtherPunctuation",
    },
    Object {
      "indexOfLine": 0,
      "line": ">![q]#$%&'()*+,-./:;[<]=[>]?@[]^_[c]{|}~<",
      "span": "     > <                                ",
      "tokenKind": "OtherPunctuation",
    },
    Object {
      "indexOfLine": 0,
      "line": ">![q]#$%&'()*+,-./:;[<]=[>]?@[]^_[c]{|}~<",
      "span": "      > <                               ",
      "tokenKind": "OtherPunctuation",
    },
    Object {
      "indexOfLine": 0,
      "line": ">![q]#$%&'()*+,-./:;[<]=[>]?@[]^_[c]{|}~<",
      "span": "       > <                              ",
      "tokenKind": "OtherPunctuation",
    },
    Object {
      "indexOfLine": 0,
      "line": ">![q]#$%&'()*+,-./:;[<]=[>]?@[]^_[c]{|}~<",
      "span": "        > <                             ",
      "tokenKind": "SingleQuote",
    },
    Object {
      "indexOfLine": 0,
      "line": ">![q]#$%&'()*+,-./:;[<]=[>]?@[]^_[c]{|}~<",
      "span": "         > <                            ",
      "tokenKind": "OtherPunctuation",
    },
    Object {
      "indexOfLine": 0,
      "line": ">![q]#$%&'()*+,-./:;[<]=[>]?@[]^_[c]{|}~<",
      "span": "          > <                           ",
      "tokenKind": "OtherPunctuation",
    },
    Object {
      "indexOfLine": 0,
      "line": ">![q]#$%&'()*+,-./:;[<]=[>]?@[]^_[c]{|}~<",
      "span": "           > <                          ",
      "tokenKind": "OtherPunctuation",
    },
    Object {
      "indexOfLine": 0,
      "line": ">![q]#$%&'()*+,-./:;[<]=[>]?@[]^_[c]{|}~<",
      "span": "            > <                         ",
      "tokenKind": "OtherPunctuation",
    },
    Object {
      "indexOfLine": 0,
      "line": ">![q]#$%&'()*+,-./:;[<]=[>]?@[]^_[c]{|}~<",
      "span": "             > <                        ",
      "tokenKind": "OtherPunctuation",
    },
    Object {
      "indexOfLine": 0,
      "line": ">![q]#$%&'()*+,-./:;[<]=[>]?@[]^_[c]{|}~<",
      "span": "              > <                       ",
      "tokenKind": "Hyphen",
    },
    Object {
      "indexOfLine": 0,
      "line": ">![q]#$%&'()*+,-./:;[<]=[>]?@[]^_[c]{|}~<",
      "span": "               > <                      ",
      "tokenKind": "OtherPunctuation",
    },
    Object {
      "indexOfLine": 0,
      "line": ">![q]#$%&'()*+,-./:;[<]=[>]?@[]^_[c]{|}~<",
      "span": "                > <                     ",
      "tokenKind": "Slash",
    },
    Object {
      "indexOfLine": 0,
      "line": ">![q]#$%&'()*+,-./:;[<]=[>]?@[]^_[c]{|}~<",
      "span": "                 > <                    ",
      "tokenKind": "OtherPunctuation",
    },
    Object {
      "indexOfLine": 0,
      "line": ">![q]#$%&'()*+,-./:;[<]=[>]?@[]^_[c]{|}~<",
      "span": "                  > <                   ",
      "tokenKind": "OtherPunctuation",
    },
    Object {
      "indexOfLine": 0,
      "line": ">![q]#$%&'()*+,-./:;[<]=[>]?@[]^_[c]{|}~<",
      "span": "                   >   <                ",
      "tokenKind": "LessThan",
    },
    Object {
      "indexOfLine": 0,
      "line": ">![q]#$%&'()*+,-./:;[<]=[>]?@[]^_[c]{|}~<",
      "span": "                      > <               ",
      "tokenKind": "Equals",
    },
    Object {
      "indexOfLine": 0,
      "line": ">![q]#$%&'()*+,-./:;[<]=[>]?@[]^_[c]{|}~<",
      "span": "                       >   <            ",
      "tokenKind": "GreaterThan",
    },
    Object {
      "indexOfLine": 0,
      "line": ">![q]#$%&'()*+,-./:;[<]=[>]?@[]^_[c]{|}~<",
      "span": "                          > <           ",
      "tokenKind": "OtherPunctuation",
    },
    Object {
      "indexOfLine": 0,
      "line": ">![q]#$%&'()*+,-./:;[<]=[>]?@[]^_[c]{|}~<",
      "span": "                           > <          ",
      "tokenKind": "AtSign",
    },
    Object {
      "indexOfLine": 0,
      "line": ">![q]#$%&'()*+,-./:;[<]=[>]?@[]^_[c]{|}~<",
      "span": "                            > <         ",
      "tokenKind": "OtherPunctuation",
    },
    Object {
      "indexOfLine": 0,
      "line": ">![q]#$%&'()*+,-./:;[<]=[>]?@[]^_[c]{|}~<",
      "span": "                             > <        ",
      "tokenKind": "OtherPunctuation",
    },
    Object {
      "indexOfLine": 0,
      "line": ">![q]#$%&'()*+,-./:;[<]=[>]?@[]^_[c]{|}~<",
      "span": "                              > <       ",
      "tokenKind": "OtherPunctuation",
    },
    Object {
      "indexOfLine": 0,
      "line": ">![q]#$%&'()*+,-./:;[<]=[>]?@[]^_[c]{|}~<",
      "span": "                               > <      ",
      "tokenKind": "OtherPunctuation",
    },
    Object {
      "indexOfLine": 0,
      "line": ">![q]#$%&'()*+,-./:;[<]=[>]?@[]^_[c]{|}~<",
      "span": "                                >   <   ",
      "tokenKind": "OtherPunctuation",
    },
    Object {
      "indexOfLine": 0,
      "line": ">![q]#$%&'()*+,-./:;[<]=[>]?@[]^_[c]{|}~<",
      "span": "                                   > <  ",
      "tokenKind": "OtherPunctuation",
    },
    Object {
      "indexOfLine": 0,
      "line": ">![q]#$%&'()*+,-./:;[<]=[>]?@[]^_[c]{|}~<",
      "span": "                                    > < ",
      "tokenKind": "OtherPunctuation",
    },
    Object {
      "indexOfLine": 0,
      "line": ">![q]#$%&'()*+,-./:;[<]=[>]?@[]^_[c]{|}~<",
      "span": "                                     > <",
      "tokenKind": "OtherPunctuation",
    },
    Object {
      "indexOfLine": 0,
      "line": ">![q]#$%&'()*+,-./:;[<]=[>]?@[]^_[c]{|}~<",
      "span": "                                      > <",
      "tokenKind": "OtherPunctuation",
    },
    Object {
      "indexOfLine": 0,
      "line": ">![q]#$%&'()*+,-./:;[<]=[>]?@[]^_[c]{|}~<",
      "span": "                                       ><",
      "tokenKind": "Newline",
    },
    Object {
      "indexOfLine": 0,
      "line": ">![q]#$%&'()*+,-./:;[<]=[>]?@[]^_[c]{|}~<",
      "span": "                                       ><",
      "tokenKind": "EndOfInput",
    },
  ],
}
`;

exports[`05 Spacing characters 1`] = `
Object {
  "buffer": "/**%0A%20*%20space%3A%20%20tab%3A%20%09%20%20form%20feed%3A%20%0C%20end%0A%20*/",
  "tokens": Array [
    Object {
      "indexOfLine": 0,
      "line": ">space:  tab: [t]  form feed: [f] end<",
      "span": ">     <                              ",
      "tokenKind": "AsciiWord",
    },
    Object {
      "indexOfLine": 0,
      "line": ">space:  tab: [t]  form feed: [f] end<",
      "span": "     > <                             ",
      "tokenKind": "OtherPunctuation",
    },
    Object {
      "indexOfLine": 0,
      "line": ">space:  tab: [t]  form feed: [f] end<",
      "span": "      >  <                           ",
      "tokenKind": "Spacing",
    },
    Object {
      "indexOfLine": 0,
      "line": ">space:  tab: [t]  form feed: [f] end<",
      "span": "        >   <                        ",
      "tokenKind": "AsciiWord",
    },
    Object {
      "indexOfLine": 0,
      "line": ">space:  tab: [t]  form feed: [f] end<",
      "span": "           > <                       ",
      "tokenKind": "OtherPunctuation",
    },
    Object {
      "indexOfLine": 0,
      "line": ">space:  tab: [t]  form feed: [f] end<",
      "span": "            >      <                 ",
      "tokenKind": "Spacing",
    },
    Object {
      "indexOfLine": 0,
      "line": ">space:  tab: [t]  form feed: [f] end<",
      "span": "                  >    <             ",
      "tokenKind": "AsciiWord",
    },
    Object {
      "indexOfLine": 0,
      "line": ">space:  tab: [t]  form feed: [f] end<",
      "span": "                      > <            ",
      "tokenKind": "Spacing",
    },
    Object {
      "indexOfLine": 0,
      "line": ">space:  tab: [t]  form feed: [f] end<",
      "span": "                       >    <        ",
      "tokenKind": "AsciiWord",
    },
    Object {
      "indexOfLine": 0,
      "line": ">space:  tab: [t]  form feed: [f] end<",
      "span": "                           > <       ",
      "tokenKind": "OtherPunctuation",
    },
    Object {
      "indexOfLine": 0,
      "line": ">space:  tab: [t]  form feed: [f] end<",
      "span": "                            > <      ",
      "tokenKind": "Spacing",
    },
    Object {
      "indexOfLine": 0,
      "line": ">space:  tab: [t]  form feed: [f] end<",
      "span": "                             >   <   ",
      "tokenKind": "Other",
    },
    Object {
      "indexOfLine": 0,
      "line": ">space:  tab: [t]  form feed: [f] end<",
      "span": "                                > <  ",
      "tokenKind": "Spacing",
    },
    Object {
      "indexOfLine": 0,
      "line": ">space:  tab: [t]  form feed: [f] end<",
      "span": "                                 >   <",
      "tokenKind": "AsciiWord",
    },
    Object {
      "indexOfLine": 0,
      "line": ">space:  tab: [t]  form feed: [f] end<",
      "span": "                                    ><",
      "tokenKind": "Newline",
    },
    Object {
      "indexOfLine": 0,
      "line": ">space:  tab: [t]  form feed: [f] end<",
      "span": "                                    ><",
      "tokenKind": "EndOfInput",
    },
  ],
}
`;
